samples/_failures_safe/1761320751_5e4067_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_49ea6757.c: In function ‘multiply_matrices’:
./samples/SAFE/__tmp_49ea6757.c:142:5: error: expected expression at end of input
  142 |     for (int i = 0; i < a->rows;
      |     ^~~
./samples/SAFE/__tmp_49ea6757.c:142:5: error: expected declaration or statement at end of input
